# monay

./: .gitignore  AGENTS.md  CLAUDE.md  PAPER_PORTFOLIO_DESIGN.md  README.md  SECURITY.md  env.example  tailwind.config.paper-portfolio.js
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/plans/: 2026-01-12-integrate-beads.md
.claude/skills/land-the-plane/: README.md  SKILL.md
.claude/skills/ui-portfolio-design/: README.md  SKILL.md  design-systems-v2.md  design-systems.md  examples.md  index.html
.claude/skills/ui-skills/: SKILL.md
.ralph/: PROMPT.md  SIGNS.md  TASKS.md  ralph.sh
.ralph/specs/: README.md  holdings.md  portfolio-implementation-plan.md
api/: buf.yaml
api/monay/v1beta1/: holdings-service.proto  holdings.proto  (+4 more)
docs/ui-portfolio/: index.html
scripts/: seed-beads.md
services/client/: .eslintrc.json  .gitignore  Dockerfile  orval.config.ts  package-lock.json  package.json  paper-portfolio.css  playwright.config.ts  pnpm-lock.yaml
services/holdings/: .coverage.html  .tool-versions  Makefile  README.md  buf.gen.yaml  env.example  example.env  go.mod  go.sum  holdings.db  ngrok.yml
services/portfolio/: .env.example  .gitignore  Makefile  config.py  main.py  pyproject.toml
services/portfolio/models/: chart.py  portfolio.py  quote.py
services/portfolio/routers/: chart.py  portfolio.py  quotes.py
services/portfolio/services/: cache.py  holdings_client.py  market.py
services/portfolio/tests/: test_cache.py  test_config.py  test_routers.py
specs/: README.md  holdings.md  portfolio-implementation-plan.md  portfolio.md
(+146 files in other folders)
